# DocumentAgent

./: .gitignore  Dockerfile  README.md  bm25_values.json  main.py  pyproject.toml
.github/workflows/: main_doagent.yml
src/agent/chat_agent/: nodes.py  schema.py  state.py  tools.py  workflow.py
src/agent/search_agent/: nodes.py  schema.py  state.py  workflow.py
src/database/: ingest.py  retriever.py  vector_store.py
